@@ -10,6 +10,8 @@ def register():
     Pool.register(
         stock.Lot,
         stock.LotByLocationContext,
+        stock.LotByWarehouseContext,
+        stock.Location,
         stock.Move,
         stock.ShipmentIn,
         stock.ShipmentOut,
