@@ -1,0 +1,12 @@
+<?xml version="1.0"?>
+<!-- This file is part of Tryton.  The COPYRIGHT file at the top level of
+this repository contains the full copyright notices and license terms. -->
+<data>
+    <xpath expr="//label[@name='forecast_date']" position="before">
+        <label name="warehouse"/>
+        <field name="warehouse"/>
+    </xpath>
+    <xpath expr="//field[@name='stock_date_end']" position="before">
+        <field name="locations" invisible="1" colspan="4"/>
+    </xpath>
+</data>
