@@ -1,3 +1,6 @@
+* Add relate to locations quantity
+* Add lots by warehouse relate
+
 Version 5.6.0 - 2020-05-04
 * Bug fixes (see mercurial logs for details)
 
